--- a/style/_object.scss
+++ b/style/_object.scss
@@ -4,3 +4,16 @@
 .flex{
     display: flex;
 }
+
+.opasity{
+    color: #ADADAD;
+    font-family: Estedad-Light;
+    font-weight: 400;
+    font-size: 10px;
+}
+
+.link{
+        color: #ffffff;
+        font-family: Estedad-Light;
+        text-decoration: none;
+    }
